--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,14 @@
 version: "3"
 services:
-    app:
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+  app:
       build: .
       ports:
         - "5002:5002"
       volumes:
         - .:/code
+      depends_on:
+        - redis
